enhancement: Treinamnto de novo modelo para classificação de emoções. Comparação de modelos, hyperparameter tuning e ensemble

--- a/notebooks/Análise de Emoções (Ekman).ipynb
+++ b/notebooks/Análise de Emoções (Ekman).ipynb
@@ -1,16 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Análise de Emoções em tweets relacionados à pandemia de Covid-19\n",
+    "\n",
+    "## Introdução\n",
+    "\n",
+    "* Motivação\n",
+    "* "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:50.181881800Z",
+     "start_time": "2023-10-23T23:50:11.161217Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import spacy\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "import os\n",
+    "import pickle\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.metrics import classification_report\n",
@@ -19,8 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:50.183883400Z",
+     "start_time": "2023-10-23T23:50:50.135882700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def criar_embeddings(df_tweets):\n",
@@ -35,31 +61,37 @@
     "        print('Fazendo os word embeddings')\n",
     "        vetores = np.array([nlp(texto).vector for texto in df_tweets.Texto])\n",
     "\n",
-    "    return vetores"
+    "    return vetores\n",
+    "\n",
+    "\n",
+    "def ler_modelo(path: str):\n",
+    "    return pickle.load(open(path, 'rb'))\n",
+    "\n",
+    "\n",
+    "def salvar_modelo(path: str, modelo):\n",
+    "    return pickle.dump(modelo, open(path, 'wb'))    \n",
+    "\n",
+    "\n",
+    "def fazer_amostragem(train_dataset: pd.DataFrame):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    :param train_dataset:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    sentimentos = train_dataset['Sentimento'].unique()\n",
+    "    df = pd.DataFrame([])\n",
+    "\n",
+    "    for sentimento in sentimentos:\n",
+    "        df_filtrado = train_dataset.loc[train_dataset['Sentimento'] == sentimento][:600]\n",
+    "        df = pd.concat([df, df_filtrado])\n",
+    "\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fazendo os word embeddings\n",
-      "Fazendo os word embeddings\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\sefaz\\Documents\\Projetos Python\\Analise-de-sentimentos-pandemia-covid19\\tweets_venv\\Lib\\site-packages\\sklearn\\svm\\_base.py:1250: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "outputs": [],
    "source": [
     "path_datasets = '../resources/datasets'\n",
     "\n",
@@ -75,32 +107,109 @@
     "    df_treinamento['Sentimento'],\n",
     "    test_size=0.2,\n",
     "    random_state=42\n",
-    ")\n",
-    "\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:51.222256800Z",
+     "start_time": "2023-10-23T23:50:50.136884200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:51.951523100Z",
+     "start_time": "2023-10-23T23:50:51.229255100Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# processamento dos dados para word embeddings\n",
-    "embeddings = criar_embeddings(x_train)\n",
-    "embeddings_teste = criar_embeddings(x_test)\n",
+    "path_embeddings_treinamento = '../resources/modelos/embeddings_treinamento.pkl'\n",
+    "path_embeddings_teste = '../resources/modelos/embeddings_teste.pkl'\n",
     "\n",
-    "# algoritmos de aprendizado de máquina para serem treinados\n",
-    "svc = LinearSVC(C=100, random_state=0, dual=True, max_iter=10000)\n",
-    "tree = DecisionTreeClassifier(random_state=0)\n",
-    "forest = RandomForestClassifier(random_state=0)\n",
+    "if os.path.exists(path_embeddings_treinamento):\n",
+    "    embeddings = ler_modelo(path_embeddings_treinamento)\n",
+    "else:\n",
+    "    embeddings = criar_embeddings(x_train)\n",
+    "    salvar_modelo(path_embeddings_treinamento, embeddings)\n",
     "\n",
-    "# treinamento dos algoritmos\n",
-    "svc.fit(embeddings, y_train)\n",
-    "tree.fit(embeddings, y_train)\n",
-    "forest.fit(embeddings, y_train)\n",
-    "\n",
-    "# previsões\n",
-    "previsoes_svc = svc.predict(embeddings_teste)\n",
-    "previsoes_tree = tree.predict(embeddings_teste)\n",
-    "previsoes_forest = forest.predict(embeddings_teste)"
+    "if os.path.exists(path_embeddings_teste):\n",
+    "    embeddings_teste = ler_modelo(path_embeddings_teste)\n",
+    "else:\n",
+    "    embeddings_teste = criar_embeddings(x_test)\n",
+    "    salvar_modelo(path_embeddings_teste, embeddings_teste)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "path_svc = '../resources/modelos/svc.pkl'\n",
+    "path_lgr = '../resources/modelos/logistic_regression.pkl'\n",
+    "path_forest = '../resources/modelos/forest.pkl'\n",
+    "\n",
+    "if os.path.exists(path_svc):\n",
+    "    svc = ler_modelo(path_svc)\n",
+    "else:\n",
+    "    svc = LinearSVC(C=100, random_state=0, dual=True, max_iter=10000)\n",
+    "    svc.fit(embeddings, y_train)\n",
+    "    salvar_modelo(path_svc, svc)\n",
+    "    \n",
+    "if os.path.exists(path_lgr):\n",
+    "    lgr = ler_modelo(path_lgr)\n",
+    "else:\n",
+    "    lgr = LogisticRegression(random_state=0)\n",
+    "    lgr.fit(embeddings, y_train)\n",
+    "    salvar_modelo(path_lgr, lgr)\n",
+    "\n",
+    "if os.path.exists(path_forest):\n",
+    "    forest = ler_modelo(path_forest)\n",
+    "else:\n",
+    "    forest = RandomForestClassifier(random_state=0, n_jobs=-1)\n",
+    "    forest.fit(embeddings, y_train)\n",
+    "    salvar_modelo(path_forest, forest)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:56.128221800Z",
+     "start_time": "2023-10-23T23:50:51.958521400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "# previsões\n",
+    "previsoes_svc = svc.predict(embeddings_teste)\n",
+    "previsoes_lgr = lgr.predict(embeddings_teste)\n",
+    "previsoes_forest = forest.predict(embeddings_teste)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:57.410717900Z",
+     "start_time": "2023-10-23T23:50:56.129220100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:58.131769400Z",
+     "start_time": "2023-10-23T23:50:57.408712500Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -118,8 +227,7 @@
       "\n",
       "    accuracy                           0.43      9053\n",
       "   macro avg       0.52      0.45      0.44      9053\n",
-      "weighted avg       0.50      0.43      0.40      9053\n",
-      "\n"
+      "weighted avg       0.50      0.43      0.40      9053\n"
      ]
     }
    ],
@@ -131,39 +239,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:58.454000400Z",
+     "start_time": "2023-10-23T23:50:58.094768200Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relatório Decision Tree\n",
+      "Relatório Logistic Regression\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      Neutro       0.78      0.80      0.79       495\n",
-      "       feliz       0.48      0.47      0.48      1931\n",
-      "        medo       0.37      0.37      0.37      2320\n",
-      "        nojo       0.32      0.31      0.32      1648\n",
-      "       raiva       0.11      0.12      0.12       562\n",
-      "      triste       0.34      0.35      0.34      2097\n",
+      "      Neutro       0.97      0.94      0.96       495\n",
+      "       feliz       0.71      0.73      0.72      1931\n",
+      "        medo       0.54      0.61      0.57      2320\n",
+      "        nojo       0.61      0.63      0.62      1648\n",
+      "       raiva       0.45      0.12      0.19       562\n",
+      "      triste       0.52      0.53      0.53      2097\n",
       "\n",
-      "    accuracy                           0.38      9053\n",
-      "   macro avg       0.40      0.40      0.40      9053\n",
-      "weighted avg       0.39      0.38      0.39      9053\n",
-      "\n"
+      "    accuracy                           0.61      9053\n",
+      "   macro avg       0.63      0.59      0.60      9053\n",
+      "weighted avg       0.60      0.61      0.60      9053\n"
      ]
     }
    ],
    "source": [
-    "print('Relatório Decision Tree')\n",
-    "print(classification_report(y_test, previsoes_tree))"
+    "print('Relatório Logistic Regression')\n",
+    "print(classification_report(y_test, previsoes_lgr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:58.697388800Z",
+     "start_time": "2023-10-23T23:50:58.377002300Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -181,8 +298,7 @@
       "\n",
       "    accuracy                           0.52      9053\n",
       "   macro avg       0.66      0.51      0.51      9053\n",
-      "weighted avg       0.55      0.52      0.51      9053\n",
-      "\n"
+      "weighted avg       0.55      0.52      0.51      9053\n"
      ]
     }
    ],
@@ -190,6 +306,75 @@
     "print('Relatório Random Forest')\n",
     "print(classification_report(y_test, previsoes_forest))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "pontuacoes_logreg = cross_val_score(lgr, embeddings_teste, y_test, cv=5, n_jobs=-1, scoring='f1_weighted')\n",
+    "pontuacoes_svc = cross_val_score(svc, embeddings_teste, y_test, cv=5, n_jobs=-1, scoring='f1_weighted')\n",
+    "pontuacoes_forest = cross_val_score(forest, embeddings_teste, y_test, cv=5, n_jobs=-1, scoring='f1_weighted');"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-24T00:10:35.746097600Z",
+     "start_time": "2023-10-23T23:50:58.644393800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista de pontuações: [0.56582297 0.58788242 0.574865   0.5794129  0.56741404]\n",
+      "Média: 0.5750794670048374\n",
+      "Lista de pontuações: [0.44221795 0.51446641 0.35366093 0.47581766 0.47062506]\n",
+      "Média: 0.45135760052701085\n",
+      "Lista de pontuações: [0.47940858 0.49138109 0.46536405 0.46713247 0.48691761]\n",
+      "Média: 0.4780407583044698\n"
+     ]
+    }
+   ],
+   "source": [
+    "def exibir_pontuacoes(pontuacoes):\n",
+    "    soma_ponuacoes = 0\n",
+    "\n",
+    "    for valor in pontuacoes:\n",
+    "        soma_ponuacoes += valor\n",
+    "        \n",
+    "    media = soma_ponuacoes / len(pontuacoes)\n",
+    "    \n",
+    "    print(f'Lista de pontuações: {pontuacoes}\\nMédia: {media}' )\n",
+    "    \n",
+    "exibir_pontuacoes(pontuacoes_logreg)\n",
+    "exibir_pontuacoes(pontuacoes_svc)\n",
+    "exibir_pontuacoes(pontuacoes_forest)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-24T00:10:35.843967100Z",
+     "start_time": "2023-10-24T00:10:35.752095600Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "O modelo Logistic Regression obteve o melhor desempenho dentre os modelos, enquanto que o LinearSVC e o Random Forest tiveram desempenhos semelhantes.\n",
+    "\n",
+    "## Trabalhos Futuros\n",
+    "Realizar o ajuste de hiperparâmetros para tentar obter um modelo de logistic regression com um desempenho ainda superior."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
