Treinamento de modelos com o dataset desbalanceado + ajuste de parâmetros

--- a/notebooks/Análise de Emoções (Ekman).ipynb
+++ b/notebooks/Análise de Emoções (Ekman).ipynb
@@ -2,17 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "# Análise de Emoções em tweets relacionados à pandemia de Covid-19\n",
-    "\n",
-    "## Introdução\n",
-    "\n",
-    "* Motivação\n",
-    "* "
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "# Análise de Emoções em tweets relacionados à pandemia de Covid-19"
+   ]
   },
   {
    "cell_type": "code",
@@ -91,6 +86,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:51.222256800Z",
+     "start_time": "2023-10-23T23:50:50.136884200Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "path_datasets = '../resources/datasets'\n",
@@ -108,14 +110,7 @@
     "    test_size=0.2,\n",
     "    random_state=42\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-23T23:50:51.222256800Z",
-     "start_time": "2023-10-23T23:50:50.136884200Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -148,6 +143,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:56.128221800Z",
+     "start_time": "2023-10-23T23:50:51.958521400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "path_svc = '../resources/modelos/svc.pkl'\n",
@@ -174,32 +176,25 @@
     "    forest = RandomForestClassifier(random_state=0, n_jobs=-1)\n",
     "    forest.fit(embeddings, y_train)\n",
     "    salvar_modelo(path_forest, forest)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-23T23:50:56.128221800Z",
-     "start_time": "2023-10-23T23:50:51.958521400Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T23:50:57.410717900Z",
+     "start_time": "2023-10-23T23:50:56.129220100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# previsões\n",
     "previsoes_svc = svc.predict(embeddings_teste)\n",
     "previsoes_lgr = lgr.predict(embeddings_teste)\n",
     "previsoes_forest = forest.predict(embeddings_teste)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-23T23:50:57.410717900Z",
-     "start_time": "2023-10-23T23:50:56.129220100Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -310,23 +305,30 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-24T00:10:35.746097600Z",
+     "start_time": "2023-10-23T23:50:58.644393800Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "pontuacoes_logreg = cross_val_score(lgr, embeddings_teste, y_test, cv=5, n_jobs=-1, scoring='f1_weighted')\n",
     "pontuacoes_svc = cross_val_score(svc, embeddings_teste, y_test, cv=5, n_jobs=-1, scoring='f1_weighted')\n",
     "pontuacoes_forest = cross_val_score(forest, embeddings_teste, y_test, cv=5, n_jobs=-1, scoring='f1_weighted');"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-24T00:10:35.746097600Z",
-     "start_time": "2023-10-23T23:50:58.644393800Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-24T00:10:35.843967100Z",
+     "start_time": "2023-10-24T00:10:35.752095600Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -355,26 +357,430 @@
     "exibir_pontuacoes(pontuacoes_logreg)\n",
     "exibir_pontuacoes(pontuacoes_svc)\n",
     "exibir_pontuacoes(pontuacoes_forest)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-24T00:10:35.843967100Z",
-     "start_time": "2023-10-24T00:10:35.752095600Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "O modelo Logistic Regression obteve o melhor desempenho dentre os modelos, enquanto que o LinearSVC e o Random Forest tiveram desempenhos semelhantes.\n",
     "\n",
     "## Trabalhos Futuros\n",
     "Realizar o ajuste de hiperparâmetros para tentar obter um modelo de logistic regression com um desempenho ainda superior."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Teste com novo dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import spacy\n",
+    "import os\n",
+    "import pickle\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import classification_report\n",
+    "from spacy.cli.download import download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def criar_embeddings(df_tweets):\n",
+    "    try:\n",
+    "        nlp = spacy.load('pt_core_news_lg')\n",
+    "    except (IOError, OSError):\n",
+    "        download('pt_core_news_lg')\n",
+    "        nlp = spacy.load('pt_core_news_lg')\n",
+    "    # desativamos todos os outros pipes que vem com o modelo nlp porque não preicsaremos deles\n",
+    "    with nlp.disable_pipes():\n",
+    "        # transformamos cada texto em um vetor e colocamos em uma array\n",
+    "        print('Fazendo os word embeddings')\n",
+    "        vetores = np.array([nlp(texto).vector for texto in df_tweets.Texto])\n",
+    "\n",
+    "    return vetores\n",
+    "\n",
+    "\n",
+    "def ler_modelo(path: str):\n",
+    "    return pickle.load(open(path, 'rb'))\n",
+    "\n",
+    "\n",
+    "def salvar_modelo(path: str, modelo):\n",
+    "    return pickle.dump(modelo, open(path, 'wb'))    \n",
+    "\n",
+    "\n",
+    "def fazer_amostragem(train_dataset: pd.DataFrame):\n",
+    "    \"\"\"\n",
+    "\n",
+    "    :param train_dataset:\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    sentimentos = train_dataset['Sentimento'].unique()\n",
+    "    df = pd.DataFrame([])\n",
+    "\n",
+    "    for sentimento in sentimentos:\n",
+    "        df_filtrado = train_dataset.loc[train_dataset['Sentimento'] == sentimento][:600]\n",
+    "        df = pd.concat([df, df_filtrado])\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Texto</th>\n",
+       "      <th>Sentimento</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>quero desejar a todos amigos um    , e creia 2...</td>\n",
+       "      <td>feliz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mais um ano ao lado dessas pessoas maravilhosa...</td>\n",
+       "      <td>feliz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>final de tarde perfeito, estou renovada e pron...</td>\n",
+       "      <td>feliz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>vamos adorar só aquele que é digno de todo o l...</td>\n",
+       "      <td>feliz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>jesus! esse é meu sentimento neste dia. passar a…</td>\n",
+       "      <td>feliz</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Texto Sentimento\n",
+       "0  quero desejar a todos amigos um    , e creia 2...      feliz\n",
+       "1  mais um ano ao lado dessas pessoas maravilhosa...      feliz\n",
+       "2  final de tarde perfeito, estou renovada e pron...      feliz\n",
+       "3  vamos adorar só aquele que é digno de todo o l...      feliz\n",
+       "4  jesus! esse é meu sentimento neste dia. passar a…      feliz"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": [
+    "path_datasets = '../resources/datasets'\n",
+    "\n",
+    "# importação dos dados\n",
+    "df_treinamento = pd.read_csv(\n",
+    "    f'{path_datasets}/tweets_ekman_2.csv', sep=';'\n",
+    ")\n",
+    "\n",
+    "df_treinamento.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_datasets = '../resources/datasets'\n",
+    "\n",
+    "# importação dos dados\n",
+    "df_treinamento = pd.read_csv(\n",
+    "    f'{path_datasets}/tweets_ekman_2.csv',\n",
+    "    sep=';'\n",
+    ").dropna()\n",
+    "df_alvo = pd.read_csv(f'{path_datasets}/tweets_pandemia.csv')\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    df_treinamento,\n",
+    "    df_treinamento['Sentimento'],\n",
+    "    test_size=0.2,\n",
+    "    random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fazendo os word embeddings\n",
+      "Fazendo os word embeddings\n"
+     ]
+    }
+   ],
+   "source": [
+    "# processamento dos dados para word embeddings\n",
+    "path_embeddings_treinamento = '../resources/modelos/embeddings_treinamento.pkl'\n",
+    "path_embeddings_teste = '../resources/modelos/embeddings_teste.pkl'\n",
+    "\n",
+    "if os.path.exists(path_embeddings_treinamento):\n",
+    "    embeddings = ler_modelo(path_embeddings_treinamento)\n",
+    "else:\n",
+    "    embeddings = criar_embeddings(x_train)\n",
+    "    salvar_modelo(path_embeddings_treinamento, embeddings)\n",
+    "\n",
+    "if os.path.exists(path_embeddings_teste):\n",
+    "    embeddings_teste = ler_modelo(path_embeddings_teste)\n",
+    "else:\n",
+    "    embeddings_teste = criar_embeddings(x_test)\n",
+    "    salvar_modelo(path_embeddings_teste, embeddings_teste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sefaz\\Documents\\Projetos Python\\Analise-de-sentimentos-pandemia-covid19\\tweets_venv\\Lib\\site-packages\\sklearn\\svm\\_base.py:1250: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\sefaz\\Documents\\Projetos Python\\Analise-de-sentimentos-pandemia-covid19\\tweets_venv\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_svc = '../resources/modelos/svc.pkl'\n",
+    "path_lgr = '../resources/modelos/logistic_regression.pkl'\n",
+    "path_forest = '../resources/modelos/forest.pkl'\n",
+    "\n",
+    "if os.path.exists(path_svc):\n",
+    "    svc = ler_modelo(path_svc)\n",
+    "else:\n",
+    "    svc = LinearSVC(C=100, random_state=0, dual=True, max_iter=10000)\n",
+    "    svc.fit(embeddings, y_train)\n",
+    "    salvar_modelo(path_svc, svc)\n",
+    "    \n",
+    "if os.path.exists(path_lgr):\n",
+    "    lgr = ler_modelo(path_lgr)\n",
+    "else:\n",
+    "    lgr = LogisticRegression(random_state=0)\n",
+    "    lgr.fit(embeddings, y_train)\n",
+    "    salvar_modelo(path_lgr, lgr)\n",
+    "\n",
+    "if os.path.exists(path_forest):\n",
+    "    forest = ler_modelo(path_forest)\n",
+    "else:\n",
+    "    forest = RandomForestClassifier(random_state=0, n_jobs=-1)\n",
+    "    forest.fit(embeddings, y_train)\n",
+    "    salvar_modelo(path_forest, forest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# previsões\n",
+    "previsoes_svc = svc.predict(embeddings_teste)\n",
+    "previsoes_lgr = lgr.predict(embeddings_teste)\n",
+    "previsoes_forest = forest.predict(embeddings_teste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relatório Linear SVC\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Neutro       0.96      0.94      0.95       510\n",
+      "       feliz       0.64      0.63      0.64      1950\n",
+      "        medo       0.55      0.35      0.43      2346\n",
+      "        nojo       0.43      0.68      0.53      1583\n",
+      "       raiva       0.15      0.17      0.16       483\n",
+      "      triste       0.47      0.44      0.45      2126\n",
+      "\n",
+      "    accuracy                           0.51      8998\n",
+      "   macro avg       0.53      0.54      0.53      8998\n",
+      "weighted avg       0.53      0.51      0.51      8998\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# testar performance\n",
+    "print('Relatório Linear SVC')\n",
+    "print(classification_report(y_test, previsoes_svc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relatório Logistic Regression\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Neutro       0.97      0.95      0.96       510\n",
+      "       feliz       0.71      0.71      0.71      1950\n",
+      "        medo       0.56      0.59      0.57      2346\n",
+      "        nojo       0.59      0.62      0.61      1583\n",
+      "       raiva       0.34      0.09      0.14       483\n",
+      "      triste       0.51      0.54      0.52      2126\n",
+      "\n",
+      "    accuracy                           0.60      8998\n",
+      "   macro avg       0.61      0.58      0.58      8998\n",
+      "weighted avg       0.60      0.60      0.60      8998\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Relatório Logistic Regression')\n",
+    "print(classification_report(y_test, previsoes_lgr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relatório Random Forest\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Neutro       0.95      0.88      0.91       510\n",
+      "       feliz       0.64      0.65      0.64      1950\n",
+      "        medo       0.44      0.56      0.49      2346\n",
+      "        nojo       0.48      0.46      0.47      1583\n",
+      "       raiva       0.80      0.01      0.02       483\n",
+      "      triste       0.44      0.44      0.44      2126\n",
+      "\n",
+      "    accuracy                           0.52      8998\n",
+      "   macro avg       0.63      0.50      0.50      8998\n",
+      "weighted avg       0.54      0.52      0.51      8998\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Relatório Random Forest')\n",
+    "print(classification_report(y_test, previsoes_forest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pontuacoes_logreg = cross_val_score(lgr, embeddings_teste, y_test, cv=5, n_jobs=-1, scoring='f1_weighted')\n",
+    "pontuacoes_svc = cross_val_score(svc, embeddings_teste, y_test, cv=5, n_jobs=-1, scoring='f1_weighted')\n",
+    "pontuacoes_forest = cross_val_score(forest, embeddings_teste, y_test, cv=5, n_jobs=-1, scoring='f1_weighted');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista de pontuações: [0.56041854 0.55852423 0.58051923 0.58116564 0.56332781]\n",
+      "Média: 0.5687910888565442\n",
+      "Lista de pontuações: [0.44731568 0.45426692 0.46152677 0.38235644 0.46037181]\n",
+      "Média: 0.4411675250606673\n",
+      "Lista de pontuações: [0.46170127 0.46119409 0.47864983 0.48144679 0.46979044]\n",
+      "Média: 0.4705564818087284\n"
+     ]
+    }
+   ],
+   "source": [
+    "def exibir_pontuacoes(pontuacoes):\n",
+    "    soma_ponuacoes = 0\n",
+    "\n",
+    "    for valor in pontuacoes:\n",
+    "        soma_ponuacoes += valor\n",
+    "        \n",
+    "    media = soma_ponuacoes / len(pontuacoes)\n",
+    "    \n",
+    "    print(f'Lista de pontuações: {pontuacoes}\\nMédia: {media}' )\n",
+    "    \n",
+    "exibir_pontuacoes(pontuacoes_logreg)\n",
+    "exibir_pontuacoes(pontuacoes_svc)\n",
+    "exibir_pontuacoes(pontuacoes_forest)"
+   ]
   }
  ],
  "metadata": {
