--- a/notebooks/Parameter Tuning para Análise de Emoções.ipynb
+++ b/notebooks/Parameter Tuning para Análise de Emoções.ipynb
@@ -2,6 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c96ac3fa1578e415",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "Vamos testar algumas técnicas para tentar incrementar o resultado obtido no primeiro estudo. Para isso, vamos testar o desempenho de outros modelos  e tentar ajustar seus parâmetros. No TCC de Mayara, ela obteve um bom resultado utilizando Naive Bayes. Para ajuste de parâmetros, acho que vale a pena testar o parâmetro C do LinearSVC para valores um pouco mais altos, utilizar a parametrização L2 e testar também a regressão logística, também com valores altos para o parâmetro C.\n",
     "\n",
@@ -10,22 +14,18 @@
     "O algoritmo *Random Forest* busca diminuir o *overfitting* da *Decision Tree* medindo o desempenho de várias árvores. Como nossos modelos não estão sofrendo disso, talvez um menor número de estimadores tenha um desempenho melhor. Vamos testar.\n",
     "\n",
     "Acho que uma opção é verificar os atributos mais importantes, selecionar apenas esses e remover a aleatoriedade dos atributos no treinamento da *random forest*.\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "c96ac3fa1578e415"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-10-25T02:25:00.026719Z",
      "start_time": "2023-10-25T02:24:38.659567200Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -44,6 +44,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "6bd8299ab7b7c286",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-25T02:25:00.039133600Z",
+     "start_time": "2023-10-25T02:25:00.035126400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def fazer_amostragem(train_dataset: pd.DataFrame):\n",
@@ -83,19 +91,19 @@
     "        vetores = np.array([nlp(texto).vector for texto in df_tweets.Texto])\n",
     "\n",
     "    return vetores"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-25T02:25:00.039133600Z",
-     "start_time": "2023-10-25T02:25:00.035126400Z"
-    }
-   },
-   "id": "6bd8299ab7b7c286"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "bc2377e264d747d4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-25T02:25:00.559306Z",
+     "start_time": "2023-10-25T02:25:00.044139900Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "path_datasets = '../resources/datasets'\n",
@@ -119,19 +127,19 @@
     "    y_trainval,\n",
     "    random_state=42\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-25T02:25:00.559306Z",
-     "start_time": "2023-10-25T02:25:00.044139900Z"
-    }
-   },
-   "id": "bc2377e264d747d4"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "1c57274b664cadea",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-25T02:25:01.519735500Z",
+     "start_time": "2023-10-25T02:25:00.598056Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# processamento dos dados para word embeddings\n",
@@ -149,35 +157,35 @@
     "else:\n",
     "    embeddings_teste = criar_embeddings(x_test)\n",
     "    salvar_modelo(path_embeddings_teste, embeddings_teste)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-25T02:25:01.519735500Z",
-     "start_time": "2023-10-25T02:25:00.598056Z"
-    }
-   },
-   "id": "1c57274b664cadea"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "logreg = LogisticRegression(random_state=0, n_jobs=-1)"
-   ],
+   "id": "46835693ca05bdd2",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-10-25T02:25:01.529499Z",
      "start_time": "2023-10-25T02:25:01.524486700Z"
-    }
+    },
+    "collapsed": false
    },
-   "id": "46835693ca05bdd2"
+   "outputs": [],
+   "source": [
+    "logreg = LogisticRegression(random_state=0, n_jobs=-1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "5d2973ee4c9ac5f0",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-25T02:56:37.795368800Z",
+     "start_time": "2023-10-25T02:25:01.532498600Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -473,31 +481,23 @@
     "previsoes_lgr_best = logreg_grid.predict(embeddings_teste)\n",
     "print(classification_report(y_test, previsoes_lgr_best))\n",
     "print(logreg_grid.best_params_)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-25T02:56:37.795368800Z",
-     "start_time": "2023-10-25T02:25:01.532498600Z"
-    }
-   },
-   "id": "5d2973ee4c9ac5f0"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "salvar_modelo(path='../resources/modelos/logreg_otimizado.pkl', modelo=logreg_grid.best_estimator_)"
-   ],
+   "id": "d43a2dbd7f2c85bd",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2023-10-25T04:30:19.784405800Z",
      "start_time": "2023-10-25T04:30:19.771201800Z"
-    }
+    },
+    "collapsed": false
    },
-   "id": "d43a2dbd7f2c85bd"
+   "outputs": [],
+   "source": [
+    "salvar_modelo(path='../resources/modelos/logreg_otimizado.pkl', modelo=logreg_grid.best_estimator_)"
+   ]
   }
  ],
  "metadata": {
@@ -516,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
